--- a/Shared/NavMenu.razor
+++ b/Shared/NavMenu.razor
@@ -29,6 +29,11 @@
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Todo
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="kintai">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Kintai
+            </NavLink>
+        </div>
     </nav>
 </div>
 
