--- a/Pages/Kintai.razor
+++ b/Pages/Kintai.razor
@@ -1,30 +1,8 @@
 ﻿@page "/kintai"
 
-<h3>Kintai(@kintais.Count(kintai => !kintai.IsDone))</h3>
+<h3>Kintai</h3>
 
-<ul>
-    @foreach (var kintai in kintais)
-    {
-        <li>
-            <input type="checkbox" @bind="kintai.IsDone" />
-            <input @bind="kintai.Title" />
-        </li>
-    }
-</ul>  
-
-<input placeholder="Something kintai" @bind="newKintai" />
-<button @onclick="AddKintai">Add kintai</button>
+<iframe src="https://calendar.google.com/calendar/embed?src=db5ea2f93f2db063b51fd15898d425689d99e3a09cece908b02fab8708b4cda5%40group.calendar.google.com&ctz=Asia%2FTokyo" style="border: 0" width="1000" height="800" frameborder="0" scrolling="no"></iframe>
 
 @code {
-    private List<KintaiItem> kintais = new();
-    private string? newKintai;
-
-    private void AddKintai()
-    {
-        if (!string.IsNullOrWhiteSpace(newKintai))
-        {
-            kintais.Add(new KintaiItem { Title = newKintai });
-            newKintai = string.Empty;
-        }
-    }
 }
